--- a/src/global.css
+++ b/src/global.css
@@ -67,6 +67,7 @@ img {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+  min-width: 320px;
 }
 
 .accent {
