--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -45,6 +45,11 @@
   font-size: 20px;
   text-decoration: none;
   width: fit-content;
+  transition: background 0.3s ease;
+}
+
+.ctaButton:hover {
+  background: #f37113;
 }
 
 .mainImg {
